--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-<p> Brandon Ross </p>
+<!DOCTYPE html5>
+<html>
+
+  <head>
+    <title>Brandon's HTML Me Something Assignment  </title>
+    <link type="text/css" rel="stylesheet" href="C:\Users\BrandonRoss\Documents\GitHub\html-me-something\style.css" />
+  </head>
+
+  <body>
+
+    <header>
+      <h1> Brandon Ross' Life in a Nutshell </h1>
+      <h3> Main Periods in My Life:
+      <ul>
+        <li> Birth </li>
+        <li> Early Life </li>
+        <li> High School </li>
+        <li> College </li>
+        <li> Current </li>
+    </header>
+
+    <main>
+      <article>
+        <h2> <div class = "subtitle"> Birth  </div></h2>
+        <img src =  "C:\Users\BrandonRoss\Documents\lc101\html-me-something\images\stl.jpg  "id = "pic1" />
+        <p class = "text"> I was born in August 19, 1993 in St. Louis, MO.
+          I am the oldest of three, one brother (Broderick) and one sister (Brittany).
+          My parents are Louis and Sherry Ross.
+          I have lived in St. Louis my whole life, more specifically in the North County area.
+         We have always had dogs in our house growing up - miniature pinschers & pitbulls. My father also keeps fish in his two fish tanks.</p>
+      </article>
+
+      <article>
+        <h2> <div class = "subtitle"> Early Life </div> </h2>
+          <img src = "C:\Users\BrandonRoss\Documents\lc101\html-me-something\images\lbj.jpg" id = "pic2" />
+          <p class = "caption"> My early life...hmmm </p>
+          <p class = "text"> My early life was very centered around sports which kind of remains true to this day. I attended Grannemann elementary school until 7th grade, when I switched schools
+              to Salem Lutheran Elementary for my middle school years. I began basketball at the age of 3 and football at the age of 7 which I continued through college. I played youth football for the
+              Florissant Raiders and AAU basketball for the St. Louis Hawks, Xplosion and Majestics.
+          </p>
+      </article>
+
+      <article>
+        <h2> <div class = "subtitle"> High School </div> </h2>
+        <img src = "C:\Users\BrandonRoss\Documents\lc101\html-me-something\images\lutherannorth.jpg" id = "pic3" />
+        <p class = "text"> Beginning in the fall of 2007 I started attending Lutheran North High School, where I participated in football, basketball and track.
+          Overall, I would say that I enjoyed my time in high school. I met a lot of new people and experienced new things. I feel it really prepared me well for the college work. My basketball team
+      lost the state championship my freshman year and our football team made the playoffs every year I was there. I was an all-conference linebacker and all-region as well as a senior. My junior year I started
+  at quarterback.</p>
+        <img src = "C:\Users\BrandonRoss\Documents\lc101\html-me-something\images\cap.jpg" id = "pic4" />
+        <p class = "text"> I graduated from Lutheran North High School in spring of 2011. </p>
+      </article>
+
+      <article>
+        <h2> <div class = "subtitle"> College </div> </h2>
+        <img src = "C:\Users\BrandonRoss\Documents\lc101\html-me-something\images\eiu.jpg" id = "pic5" />
+        <p class = "caption"> Wild Times in the Chuck </p>
+        <p class = "text"> In the fall of 2011 I started at Eastern Illinois University, located in Charleston, IL aka "The Chuck". This was probably the most fun time of my life to this point.
+        I met so many different people and had so many memorable experiences. During college, I participated on the football team and won 2 conference championships. I also received the scholar athlete award.
+    I became a member of Kappa Alpha Psi fraternity inc. I majored in business management and management information systems. I graduated in December of 2015.</p>
+        <img src = "C:\Users\BrandonRoss\Documents\lc101\html-me-something\images\kappa.jpg" id = "pic6" />
+        <p class="caption"> My Fraternity </p>
+      </article>
+
+      <article>
+        <h2> <div class = "subtitle"> Current </div> </h2>
+        <img src = "C:\Users\BrandonRoss\Documents\lc101\html-me-something\images\launchcode.jpg" id = "pic7" />
+        <p class = "text"> Currently, I am taking classes with Launch Code. I have recently been employed by Edward Jones
+          and hopefully with Launch Code I will expand my coding knowledge.</p>
+      </article>
+    </main>
+
+      <footer>
+        <p> This was a very condensed summary of my life to this point<br>&#174 Brandon Ross 2017</P>
+
+
+
+  </body>
